tests/lit/syntax/error_shadow_induction.silly
// RUN: cd %S
// RUN: %Not %ExeSilly -g error_shadow_induction.silly -o %t.exe 2>&1 | %FileCheck %s
// CHECK: error_shadow_induction.silly:11:1: error: Induction variable i clashes with declared variable
// CHECK:    11 | FOR (INT32 i: (0, 3)) {  // shadows outer i
// CHECK:       | ^


// error_shadow_induction.silly
INT32 i = 99;  // outer var

FOR (INT32 i: (0, 3)) {  // shadows outer i
    PRINT "inner i=", i;  // uses induction %arg0
};

PRINT "outer i=", i;  // uses declared 99
